AWSCFnTestALB.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Creating VPC and subnet with CloudFormation

Parameters:
  PJPrefix:
    Type: String

Resources:
  #-----------------------------------------------#
  #VPC作成
  CFVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      # dedicated | default | host
      InstanceTenancy: default
      Tags:
        - Key: name
          Value: CFVPC
  #-----------------------------------------------#
  #サブネット作成
  #パブリックサブネット1
  CFSubnetPublic1a:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ap-northeast-1a
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: CFSubnetPublic1a
      VpcId:
        Ref: CFVPC

  #パブリックサブネット2
  CFSubnetPublic1c:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ap-northeast-1c
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: CFSubnetPublic1c
      VpcId:
        Ref: CFVPC

  #プライベートサブネット1
  CFSubnetPrivate1a:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ap-northeast-1a
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: CFSubnetPrivate1a
      VpcId:
        Ref: CFVPC

  #プライベートサブネット2
  CFSubnetPrivate1c:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ap-northeast-1c
      CidrBlock: 10.0.3.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: CFSubnetPrivate1c
      VpcId:
        Ref: CFVPC

  #-----------------------------------------------#
  #ルートテーブル作成
  #public
  CFPublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: CFPublicRouteTable
      VpcId: !Ref CFVPC

  #ルートテーブル関連付け→サブネット
  PublicSubnet1aRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref CFSubnetPublic1a
      RouteTableId: !Ref CFPublicRouteTable

  PublicSubnet1cRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref CFSubnetPublic1c
      RouteTableId: !Ref CFPublicRouteTable

  #-----------------------------------------------#
  #インターネットゲートウェイ作成
  CFInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: CFInternetGateway
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref CFVPC
      InternetGatewayId: !Ref CFInternetGateway

  #-----------------------------------------------#
  #ルーティング
  route:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref CFInternetGateway
      RouteTableId: !Ref CFPublicRouteTable

  #-----------------------------------------------#
  #セキュリティグループ
  #パブリック
  CFPubricEC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow ssh,HTTP,HTTPS,rails to client host
      GroupName: CFSGforPubric
      SecurityGroupIngress:
        #ssh
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

        #HTTP
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

        #HTTPS
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

        #rails
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: CFEC2SecurityGroup
      VpcId: !Ref CFVPC

    #プライベート　for RDS
  CFPrivateSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: for RDS
      VpcId: !Ref CFVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: CFPrivateSecurityGroup

  #-----------------------------------------------#
  #EC2インスタンス作成
  CFec2instance:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: ap-northeast-1a
      ImageId: ami-06ad9296e6cf1e3cf
      InstanceInitiatedShutdownBehavior: stop
      InstanceType: t2.micro
      SecurityGroupIds:
        - !Ref CFPubricEC2SecurityGroup
      SubnetId: !Ref CFSubnetPublic1a
      Tags:
        - Key: Name
          Value: CFec2instance
  #-----------------------------------------------#
  #DBサブネットグループ作成
  CFDBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: PrivateSubnetGroup
      DBSubnetGroupName: CFDBSubnetGroup
      SubnetIds:
        - !Ref CFSubnetPrivate1a
        - !Ref CFSubnetPrivate1c
      Tags:
        - Key: Name
          Value: CFDBSubnetGroup
  #-----------------------------------------------#
  #RDSの作成 MySQL
  CFrdsdbinstance:
    Type: AWS::RDS::DBInstance
    Properties:
      AllocatedStorage: 20
      AvailabilityZone: ap-northeast-1a
      BackupRetentionPeriod: 0
      DBInstanceClass: db.t2.micro
      DBInstanceIdentifier: cfrdsdbinstance
      DBName: cfrdsdbinstance
      DBSubnetGroupName: !Ref CFDBSubnetGroup
      Engine: MySQL
      EngineVersion: 5.7.28
      MasterUsername: admin
      MasterUserPassword: adminpass
      StorageType: Standard
      VPCSecurityGroups:
        - !Ref CFPrivateSecurityGroup

  #-----------------------------------------------#
  #ターゲットグループ
  CFTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckPath: "/"
      HealthCheckPort: traffic-port
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      Matcher:
        HttpCode: 200
      Name: CFTargetGroup
      Port: 80
      Protocol: HTTP
      Tags:
        - Key: Name
          Value: CFTargetGroup
      Targets:
        - Id: !Ref CFec2instance
          Port: 80
      TargetType: instance
      UnhealthyThresholdCount: 2
      VpcId: !Ref CFVPC

  #-----------------------------------------------#
  #ELBの作成
  CFALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: CFALB
      Scheme: internet-facing
      SecurityGroups:
        - !Ref CFPubricEC2SecurityGroup
      Subnets:
        - !Ref CFSubnetPublic1a
        - !Ref CFSubnetPublic1c
      Tags:
        - Key: Name
          Value: CFALB
      Type: application

  CFALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn: !Ref CFTargetGroup
          Type: forward
      LoadBalancerArn: !Ref CFALB
      Port: 80
      Protocol: HTTP
